# app/controllers/api/v1/transactionController.js
@@ -56,14 +56,6 @@ module.exports = {
       transactionService
         .transactionHistory(req)
         .then((transaction) => {
-          if(!transaction.data){
-            res.status(422).json({
-              status: transaction.status,
-              message: transaction.message,
-            });
-            return;
-          }
-
           res.status(201).json({
             status: transaction.status,
             message: transaction.message,
@@ -79,28 +71,53 @@ module.exports = {
   },
 
     getById(req, res) {
-      transactionService
-        .transactionById(req)
-        .then((transaction) => {
-          if(!transaction.data){
-            res.status(422).json({
-              status: transaction.status,
-              message: transaction.message,
-            });
-            return;
-          }
-
-          res.status(201).json({
+    transactionService
+      .transactionById(req)
+      .then((transaction) => {
+        if(!transaction.data){
+          res.status(422).json({
             status: transaction.status,
             message: transaction.message,
-            data: transaction.data,
           });
-        })
-        .catch((err) => {
-          res.status(422).json({
-            status: "FAIL",
-            message: err.message,
-          });
+          return;
+        }
+
+        res.status(201).json({
+          status: transaction.status,
+          message: transaction.message,
+          data: transaction.data,
         });
+      })
+      .catch((err) => {
+        res.status(422).json({
+          status: "FAIL",
+          message: err.message,
+        });
+      });
+  },
+
+  printTicket(req, res) {
+    transactionService
+      .transactionPrint(req)
+      .then((transaction) => {
+        if(!transaction.data){
+          res.status(422).json({
+            status: transaction.status,
+            message: transaction.message,
+          });
+          return;
+        }
+
+        res.status(201).json({
+          status: transaction.status,
+          message: transaction.message,
+        });
+      })
+      .catch((err) => {
+        res.status(422).json({
+          status: "FAIL",
+          message: err.message,
+        });
+      });
   },
 }
